--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+    <div class="sip-option-container">
+        <input type="radio" class="sip-option" name="sip-option" value="sip" checked/>
+        <label>SIP</label>
+        <input type="radio" class="sip-option" name="sip-option" value="lumpsum"/>
+        <label>Lumpsum</label>
+    </div>
     <div class="calc-container">
         <h1 class="calc-header">SIP Calculator</h1>
         <div class="calc-wrapper">
@@ -16,7 +22,7 @@
                     <div class="subtitle">
                         <span class="amount-title">SIP Amount Per Month</span>
                         <span>
-                            <input class="input-text" type="text" value="5000"/>
+                            <input class="input-text" type="text" value="5000" maxlength="6"/>
                         </span>
                     </div>
                     <div class="input-range">
@@ -27,7 +33,7 @@
                     <div class="subtitle">
                         <span class="time-title">Investment Period</span>
                         <span>
-                            <input class="input-text" type="text" value="10"/>
+                            <input class="input-text" type="text" value="10" maxlength="2"/>
                         </span>
                     </div>
                     <div class="input-range">
@@ -38,7 +44,7 @@
                     <div class="subtitle">
                         <span class="return-title">Expected Rate of Return</span>
                         <span>
-                            <input class="input-text" type="text" value="14"/>
+                            <input class="input-text" type="text" value="14" maxlength="3"/>
                         </span>
                     </div>
                     <div class="input-range">
